# loopflow

./: .coverage  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.agents/subagent/: agents.json
.github/workflows/: test.yml
docs/: README.md  ref_goal_mode.md  vision.md
docs/ac/: 0001-loopflow.md  0001-template.md  0002-goal-mode.md  0003-agent-layer.md  0004-scheduling.md  0009-phase-graph.md  0010-webui.md  README.md
docs/adr/: 0001-tech-stack.md  0001-template.md  0002-architecture.md  0003-backend-reuse.md  0004-resume-mechanism.md  0005-test-framework.md  0006-ci-platform.md  0007-coverage.md  0008-deployment.md  0009-phase-graph.md  0010-design-boundary.md  0011-agent-output-error.md  0012-workflow-state.md  0013-worktree-isolation.md  0014-mock-redesign.md  0015-skill-support.md  0016-workflow-environment.md  0017-skill-boundary.md  0018-transport-strategy.md  0019-kimi-output-format.md  0020-claude-output-format.md  0021-cache-acp-schema.md  0022-codex-output-format.md  0023-backend-feature-strategy.md  0024-json-extraction.md  0025-agent-frontmatter-alignment.md  0026-agent-extends.md  0027-goal-mode.md  0028-agent-layer.md  0030-ddd-architecture.md  (+7 more)
scripts/: check-ac-manifest.py  mr-gate.sh  submission-gate.py  sync-web-assets.sh  verify-coverage.py  verify-coverage.sh  verify-wheel-assets.py  wheel-smoke.sh
tests/: __init__.py  conftest.py  spike_resume.py
web/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.tsbuildinfo  tsconfig.node.json  tsconfig.node.tsbuildinfo  vite.config.ts
(+178 files in other folders)
